# ipmitool

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  INSTALL  Makefile.am  README  _config.yml  about.md  bootstrap  configure.ac  configure.in  csv-revision
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  test.yml
_posts/: 2021-11-03-welcome-to-jekyll.markdown
contrib/: Makefile.am  README  bmc-snmp-proxy  bmc-snmp-proxy.service  bmc-snmp-proxy.sysconf  create_webpage.sh  create_webpage_compact.sh  exchange-bmc-os-info.init.redhat  exchange-bmc-os-info.service.redhat  ipmi.init.basic  ipmievd.init.debian  ipmievd.init.redhat  ipmievd.init.suse  log_bmc.sh  oem_ibm_sel_map
control/: Makefile.am  ipmitool.spec.in  prototype.in  rpmmacros.in  rpmrc
debian/: README.Debian  copyright  ipmitool.ipmievd.init  rules
doc/: ipmievd.8  ipmievd.8.in  ipmitool.1  ipmitool.1.in
include/: Makefile.am
include/ipmitool/: Makefile.am  bswap.h  cmnpef.h  cmnsdd.h  cmnslf.h  cssapi.h  cssdprod.h  cssipmi.h  cssipmix.h  cssstat.h  csssupt.h  helper.h  hpm2.h  ipmi.h  ipmi_cc.h  ipmi_cfgp.h  ipmi_channel.h  ipmi_chassis.h  ipmi_constants.h  ipmi_dcmi.h  ipmi_delloem.h  ipmi_ekanalyzer.h  ipmi_entity.h  ipmi_event.h  ipmi_firewall.h  ipmi_fru.h  ipmi_fwum.h  ipmi_gendev.h  ipmi_hpeoem.h  ipmi_hpmfwupg.h  ipmi_ime.h  ipmi_intf.h  ipmi_isol.h  ipmi_kontronoem.h  ipmi_lanp.h  ipmi_lanp6.h  ipmi_main.h  ipmi_mc.h  ipmi_newisysoem.h  ipmi_nm.h  (+21 more)
ipmitool/: AUTHORS  COPYING  ChangeLog  Makefile  Makefile.am  README  bmcautoconf.sh  bootstrap  configure.in  ipmi_chassis.c  ipmi_fru.c  ipmi_lanp.c  ipmi_sdr.c  ipmi_sel.c  ipmitool.1.in  ipmitool.spec.in  main.c
ipmitool/contrib/: Makefile.am  README  bmc-snmp-proxy  bmc-snmp-proxy.service  bmcautoconf.sh  bmclanconf  collect_data.sh  create_rrds.sh  create_webpage.sh  exchange-bmc-os-info.init.redhat  exchange-bmc-os-info.service.redhat  exchange-bmc-os-info.sysconf  ipmi.init  ipmi.init.redhat  oem_ibm_sel_map
ipmitool/control/: Makefile.am  ipmitool.spec.in  pkginfo.in  prototype  prototype.in  rpmmacros  rpmmacros.in  rpmrc
ipmitool/debian/: changelog  control  copyright  dirs  docs  ipmitool.1  rules  watch
ipmitool/doc/: Makefile.am  ipmievd.8  ipmitool.1  ipmitool.1.in
ipmitool/include/: Makefile.am  asf.h  helper.h  ipmi.h  ipmi_chassis.h  ipmi_dev.h  ipmi_entity.h  ipmi_fru.h  ipmi_lan.h  ipmi_sdr.h  ipmi_sel.h  rmcp.h
ipmitool/include/ipmitool/: Makefile.am  bswap.h  helper.h  ipmi.h  ipmi_bmc.h  ipmi_cc.h  ipmi_channel.h  ipmi_chassis.h  ipmi_constants.h  ipmi_dcmi.h  ipmi_delloem.h  ipmi_ekanalyzer.h  ipmi_entity.h  ipmi_event.h  ipmi_firewall.h  ipmi_fru.h  ipmi_fwum.h  ipmi_hpmfwupg.h  ipmi_ime.h  ipmi_intf.h  ipmi_isol.h  ipmi_kontronoem.h  ipmi_lanp.h  ipmi_main.h  ipmi_mc.h  ipmi_oem.h  ipmi_pef.h  ipmi_picmg.h  ipmi_raw.h  ipmi_sdr.h  ipmi_sdradd.h  ipmi_sel.h  ipmi_sensor.h  ipmi_session.h  ipmi_sol.h  ipmi_strings.h  ipmi_sunoem.h  ipmi_tsol.h  ipmi_user.h  log.h  (+1 more)
ipmitool/lib/: Makefile.am  dimm_spd.c  helper.c  ipmi_bmc.c  ipmi_channel.c  ipmi_chassis.c  ipmi_dcmi.c  ipmi_delloem.c  ipmi_dev.c  ipmi_ekanalyzer.c  ipmi_event.c  ipmi_firewall.c  ipmi_fru.c  ipmi_fwum.c  ipmi_gendev.c  ipmi_hpmfwupg.c  ipmi_ime.c  ipmi_intf.c  ipmi_isol.c  ipmi_kontronoem.c  ipmi_lan.c  ipmi_lanp.c  ipmi_main.c  ipmi_mc.c  ipmi_oem.c  ipmi_pef.c  ipmi_picmg.c  ipmi_raw.c  ipmi_sdr.c  ipmi_sdradd.c  ipmi_sel.c  ipmi_sensor.c  ipmi_session.c  ipmi_sol.c  ipmi_strings.c  ipmi_sunoem.c  ipmi_tsol.c  ipmi_user.c  ipmi_watchdog.c  log.c
ipmitool/src/: Makefile.am  bmcautoconf.sh  ipmievd.c  ipmishell.c  ipmitool.c
ipmitool/src/plugins/: Makefile.am  ipmi_intf.c  ipmi_intf_static.c.in
ipmitool/src/plugins/bmc/: Makefile.am  bmc.c  bmc.h  bmc_intf.h
ipmitool/src/plugins/dummy/: Makefile.am  dummy.c  dummy.h
ipmitool/src/plugins/free/: Makefile.am  free.c
ipmitool/src/plugins/imb/: Makefile.am  imb.c  imbapi.c  imbapi.h
ipmitool/src/plugins/lan/: Makefile.am  asf.h  auth.c  auth.h  lan.c  lan.h  md5.h  rmcp.h
ipmitool/src/plugins/lanplus/: Makefile.am  README.lanplus  README.sol  asf.h  lanplus.c  lanplus.h  lanplus_crypt.c  lanplus_crypt.h  lanplus_crypt_impl.c  lanplus_crypt_impl.h  lanplus_dump.c  lanplus_dump.h  lanplus_strings.c  rmcp.h
ipmitool/src/plugins/lipmi/: Makefile.am  lipmi.c  lipmi.h
ipmitool/src/plugins/open/: Makefile.am  open.c  open.h
ipmitool/src/plugins/serial/: serial_basic.c  serial_terminal.c
lib/: Makefile.am  cmnpef.c  cmnsdd.c  cmnslf.c  create_pen_list  csssupt.c  dimm_spd.c  helper.c  hpm2.c  ipmi_cfgp.c  ipmi_channel.c  ipmi_chassis.c  ipmi_dcmi.c  ipmi_delloem.c  ipmi_ekanalyzer.c  ipmi_event.c  ipmi_firewall.c  ipmi_fru.c  ipmi_fwum.c  ipmi_gendev.c  ipmi_hpeoem.c  ipmi_hpmfwupg.c  ipmi_ime.c  ipmi_isol.c  ipmi_kontronoem.c  ipmi_lanp.c  ipmi_lanp6.c  ipmi_main.c  ipmi_mc.c  ipmi_newisysoem.c  ipmi_nm.c  ipmi_oem.c  ipmi_pef.c  ipmi_picmg.c  ipmi_quantaoem.c  ipmi_raw.c  ipmi_sdr.c  ipmi_sdradd.c  ipmi_sel.c  ipmi_sel_delloem.c  (+16 more)
man/: Makefile.am  ipmievd.8.in  ipmitool.1.in
src/: Makefile.am  ipmievd.c  ipmishell.c  ipmitool.c
src/plugins/: Makefile.am  ipmi_intf.c
src/plugins/bmc/: Makefile.am  bmc.c  bmc.h  bmc_intf.h
src/plugins/dbus/: Makefile.am  dbus.c
src/plugins/dummy/: Makefile.am  dummy.c  dummy.h
src/plugins/free/: Makefile.am  free.c
src/plugins/imb/: Makefile.am  imb.c  imbapi.c  imbapi.h
src/plugins/lan/: Makefile.am  asf.h  auth.c  auth.h  lan.c  lan.h  md5.c  rmcp.h
src/plugins/lanplus/: Makefile.am  README.sol  asf.h  lanplus.c  lanplus.h  lanplus_crypt.c  lanplus_crypt.h  lanplus_crypt_impl.c  lanplus_crypt_impl.h  lanplus_dump.c  lanplus_dump.h  lanplus_strings.c  rmcp.h
src/plugins/lipmi/: Makefile.am  lipmi.c  lipmi.h
src/plugins/open/: Makefile.am  open.c  open.h
src/plugins/serial/: Makefile.am  serial_basic.c  serial_terminal.c
src/plugins/usb/: Makefile.am  usb.c
test/: README.md  build_sim_bmc.sh  run_sim_bmc.sh  test.robot
